// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils / classTransforms should not transform classes when no option is set 1`] = `
[
  [
    "class-name-a",
  ],
  [
    "classNameB",
  ],
  [
    "class-Name-C",
  ],
  [
    "__class_nAmeD--",
  ],
]
`;

exports[`utils / classTransforms should transform classes correctly when \`classnameTransform\` set to \`asIs\` 1`] = `
[
  [
    "class-name-a",
  ],
  [
    "classNameB",
  ],
  [
    "class-Name-C",
  ],
  [
    "__class_nAmeD--",
  ],
]
`;

exports[`utils / classTransforms should transform classes correctly when \`classnameTransform\` set to \`camelCase\` 1`] = `
[
  [
    "class-name-a",
    "classNameA",
  ],
  [
    "classNameB",
  ],
  [
    "class-Name-C",
    "classNameC",
  ],
  [
    "__class_nAmeD--",
    "classNAmeD",
  ],
]
`;

exports[`utils / classTransforms should transform classes correctly when \`classnameTransform\` set to \`camelCaseOnly\` 1`] = `
[
  [
    "classNameA",
  ],
  [
    "classNameB",
  ],
  [
    "classNameC",
  ],
  [
    "classNAmeD",
  ],
]
`;

exports[`utils / classTransforms should transform classes correctly when \`classnameTransform\` set to \`dashes\` 1`] = `
[
  [
    "class-name-a",
    "classNameA",
  ],
  [
    "classNameB",
  ],
  [
    "class-Name-C",
    "classNameC",
  ],
  [
    "__class_nAmeD--",
  ],
]
`;

exports[`utils / classTransforms should transform classes correctly when \`classnameTransform\` set to \`dashesOnly\` 1`] = `
[
  [
    "classNameA",
  ],
  [
    "classNameB",
  ],
  [
    "classNameC",
  ],
  [
    "__class_nAmeD--",
  ],
]
`;
